courseProject/manifests/base/todoApp/todoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: image
          persistentVolumeClaim:
            claimName: todoapp-pvc
      containers:
        - name: todoapp
          image: todo-app
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 5000
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "250Mi"
              cpu: "50m"
          volumeMounts:
            - name: image
              mountPath: /usr/src/app/images
