courseProject/manifests/base/todoApp/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todoapp-route
spec:
  parentRefs:
    - name: todoapp-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todoapp-svc
          port: 2345
